2012-02-27  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testAbstractContext.cpp: Fix testcases.

	* src/dmcs/DLVInstantiator.cpp: Init evaluator's mqs from here.
	* src/dmcs/Evaluator.cpp: Let Instantiator initialize mqs.

	* include/mcs/BridgeRuleEvaluator.h: Update heads with k1, k2.
	* src/mcs/BridgeRuleEvaluator.cpp: Likewise.
	* include/mcs/Heads.h: Likewise.
	* src/dmcs/DLVEvaluator.cpp: Likewise.

	* include/dmcs/DLVEvaluator.h: Remove temporary method.
	* include/dmcs/Evaluator.h: Likewise.

	* include/mcs/NewContext.h: Set fixed pack_size for asking neighbors.
	Will be initiated from command line arguments.
	* src/mcs/NewContext.cpp: Likewise.
	* include/mcs/StreamingJoiner.h: Likewise.
	* src/mcs/StreamingJoiner.cpp: Likewise.
	* testsuite/testJoiner.cpp: Likewise.

	* testsuite/testDLVProcess.cpp: Add some remarks.
	* testsuite/testAbstractContext.cpp: Likewise.

	* testsuite/Makefile.am: Add testDLVProcess.

	* src/dmcs/DLVEvaluator.cpp: Clean up.
	* include/mcs/NewContext.h: Likewise.
	* src/mcs/NewContext.cpp: Likewise.

2012-02-24  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testDLVProcess.cpp: New file.

2012-02-22  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/dmcs/DLVEvaluator.cpp: A dirty hack: sleep 1 microsec to deal with
	race conditions when deleting dlvprocess.

	* src/dmcs/Evaluator.cpp: Separate init_mqs().

	* include/mcs/Heads.h: Add comparison operators for heads.

	* include/dmcs/DLVEvaluator.h: Move k1, k2 to the level of Evaluator.
	* src/dmcs/DLVEvaluator.cpp: Likewise.
	* include/dmcs/Evaluator.h: Likewise.

	* testsuite/testAbstractContext.cpp: Add testcase for leaf contexts.
	Add testcase for DLVEvaluator.

	* include/mcs/NewContext.h: Deal with leaf contexts.
	* src/mcs/NewContext.cpp: Likewise.
	* include/mcs/StreamingJoiner.h: Likewise.
	* src/dmcs/DLVEvaluator.cpp: Likewise.
	* src/dmcs/Evaluator.cpp: Likewise.

2012-02-21  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testAbstractContext.cpp: Fix testcase.
